--- a/index.html
+++ b/index.html
@@ -8,21 +8,21 @@ permalink: /
     <div class="container">
         <div class="row centered">
             <div class="col-md-4">
-                <i class="fa fa-heart-o"></i>
-                <h4>Handsomely Crafted</h4>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                <i class="fa fa-paint-brush"></i>
+                <h4>Get Creative</h4>
+                <p class="text-justify">Coding is a highly creative endeavour. How do you want your site to look, and how will users interact with it? Learn how to create a great user experience for your visitors and keep them coming back to your page over and over again.</p>
+                <p><br/><a href="#" class="btn btn-theme">More Info</a></p>
+            </div>
+            <div class="col-md-4">
+                <i class="fa fa-code"></i>
+                <h4>Get Typing</h4>
+                <p class="text-justify">Write the page and content in a lanugage like HTML, make it look stunning using CSS and finally make it interactive and playful using JavaScript. These three languages will challenge you and reward you when you get them all to play nice together.</p>
                 <p><br/><a href="#" class="btn btn-theme">More Info</a></p>
             </div>
             <div class="col-md-4">
                 <i class="fa fa-flask"></i>
-                <h4>Retina Ready</h4>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-                <p><br/><a href="#" class="btn btn-theme">More Info</a></p>
-            </div>
-            <div class="col-md-4">
-                <i class="fa fa-trophy"></i>
-                <h4>Quality Theme</h4>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                <h4>Get Practicing</h4>
+                <p class="text-justify">Read Code. Write Code. Repeat. The more time you spend making, breaking and then fixing your programs the better you'll get. Find sites that you really like and study how they were made. Remix them and create something new.</p>
                 <p><br/><a href="#" class="btn btn-theme">More Info</a></p>
             </div>		 				
         </div>
@@ -34,13 +34,13 @@ permalink: /
 <div class="container mtb">
     <div class="row">
         <div class="col-lg-4 col-lg-offset-1">
-            <h4>More About Our Agency.</h4>
+            <h4>More About Us.</h4>
             <p>{{ site.about }}</p>
             <p><br/><a href="{{ "/about/" | prepend: site.baseurl }}" class="btn btn-theme">More Info</a></p>
         </div>
 
         <div class="col-lg-3">
-            <h4>Frequently Asked</h4>
+            <h4>Frequently Asked Questions</h4>
             <div class="hline"></div>
             {% for post in site.categories['question'] %} 
                 <p><a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a></p>
@@ -48,7 +48,7 @@ permalink: /
         </div>
 
         <div class="col-lg-3">
-            <h4>Latest Posts</h4>
+            <h4>Latest Blog Posts</h4>
             <div class="hline"></div>
             {% for post in site.categories['blog'] limit:5 %} 
                 <p><a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}.</a></p>
