added overview layout

--- a/html.html
+++ b/html.html
@@ -1,5 +1,5 @@
 ---
-layout: about
+layout: overview
 title: HTML
 permalink: /html/
 ---
@@ -11,14 +11,17 @@ permalink: /html/
         </div>
         <div class="col-lg-6">
             <h4>HTML</h4>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. </p>
-            <p>It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-            <p>Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source.</p>
-            <p><br/><a href="/contact/" class="btn btn-theme">Contact Us</a></p>
-        </div>
-        <div class="col-lg-6">
-            <h4>HTML</h4>
-          <p>HTML stands for HyperText Markup Language</p> 
+          <p>HTML stands for HyperText Markup Language. This means that all the content - such as text, images, 
+          tables etc. - is marked up so that a web browser can understand what it is. You mark up content but 
+          putting tags around it. A tag is anything contained between brackets like these: <br>
+          <code> &lt; &nbsp; &gt; <code> <br>
+          Usually you have to put an opening tag before the content and a closing tag
+          after it. For example, to begin a HTML document you need an opening HTML tag that looks like this: <br>
+          <code>&lt;HTML&gt;</code> <br>
+          The corresponding closing tag is very similar, it just has an additional <code> / </code> like so: <br>
+          <code> &lt;/HTML&gt; </code>
+          
+          </p> 
           <br/><a href="/contact/" class="btn btn-theme">Contact Us</a>
         </div>
     </div><!--/row -->
