fixed html page

--- a/html.html
+++ b/html.html
@@ -14,7 +14,7 @@ permalink: /html/
           <p>HTML stands for HyperText Markup Language. This means that all the content - such as text, images, 
           tables etc. - is marked up so that a web browser can understand what it is. You mark up content but 
           putting tags around it. A tag is anything contained between brackets like these: <br>
-          <code> &lt; &nbsp; &gt; <code> <br>
+          <code> &lt; &nbsp; &gt; </code> <br>
           Usually you have to put an opening tag before the content and a closing tag
           after it. For example, to begin a HTML document you need an opening HTML tag that looks like this: <br>
           <code>&lt;HTML&gt;</code> <br>
