added content to js and html

--- a/software.html
+++ b/software.html
@@ -13,7 +13,8 @@ permalink: /software/
         <div class="col-lg-6">
 
         <h3>Browsers</h3>
-            <p>Check you have an up-to-date browser by visiting <a href="http://www.whatsmybrowser.org/"> whatsmybrowser.org</a></p>
+            <p>Check you have an up-to-date browser by visiting <a href="http://www.whatsmybrowser.org/" target="_blank"> 
+            whatsmybrowser.org</a></p>
         
         <h3>Editors</h3>
             <p>There are a number of great code editors that you can use, some are paid but a lot are free. To keep 
