tidied up CSS and HTML overview pages

--- a/css.html
+++ b/css.html
@@ -11,7 +11,16 @@ permalink: /css/
         </div>
         <div class="col-lg-6">
             <h4>CSS</h4>
-          <p>CSS stands for Cascading Style Sheet</p> 
+          <p>CSS stands for Cascading Style Sheet. As you will quickly learn, the most effective way of 
+          styling the content on your website is with CSS, because it allows you to seperate the content 
+          from the presentation. To see some incredible examples of this in action visit 
+          <a href="http://csszengarden.com" target="_blank">CSS Zen Garden.</a> </p>
+          <h5>Syntax</h5>
+          Since CSS is a different language from CSS the syntax, or structure, of the language is different from 
+          HTML. First of all you have to select what element on the page you want to style. This is known as a 
+          <em>selector</em>. For example you might want to change the appearance of a `<div>`. Once you've 
+          chosen what thing to style you have to specify what <em>property</em> you want to modify. Finally you 
+          need to give the chosen property a <em>value.</em> Read on to find out more about this important langauge.  
           <br/><a href="/contact/" class="btn btn-theme">Contact Us</a>
         </div>
     </div><!--/row -->
