--- a/software.html
+++ b/software.html
@@ -13,7 +13,7 @@ permalink: /software/
             {% for post in site.categories['software'] %}
                 <!-- Blog Post -->
                 <a href="{{ post.url | prepend: site.baseurl }}">
-                    <img class="img-responsive" src="{{ post.img }}">
+                    <img class="img-responsive" src="{{ "/assets/img/850x400.png" | prepend: site.baseurl }}{{ page.img }}">
                 </a>    
                 <a href="{{ post.url | prepend: site.baseurl }}"><h3 class="ctitle">{{ post.title }}</h3></a>
                 <p><csmall>{{ post.date | date: "%b %-d, %Y" }}. | By: {{ post.author }}</csmall></p>
