--- a/software.html
+++ b/software.html
@@ -2,6 +2,7 @@
 layout: software
 title: Software
 permalink: /software/
+image: 850x400.png
 ---
 
 <div class="container mtb">
@@ -9,12 +10,10 @@ permalink: /software/
 
         <!-- SOFTWARE TUTORIALS LIST -->
         <div class="col-lg-8">
+            <img class="img-responsive" src="{{ "/assets/img/850x400.png" | prepend: site.baseurl }}">
 
             {% for post in site.categories['software'] %}
                 <!-- Blog Post -->
-                <a href="{{ post.url | prepend: site.baseurl }}">
-                    <img class="img-responsive" src="{{ "/assets/img/850x400.png" | prepend: site.baseurl }}{{ page.img }}">
-                </a>    
                 <a href="{{ post.url | prepend: site.baseurl }}"><h3 class="ctitle">{{ post.title }}</h3></a>
                 <p><csmall>{{ post.date | date: "%b %-d, %Y" }}. | By: {{ post.author }}</csmall></p>
                 {{ post.excerpt }}
