--- a/css.html
+++ b/css.html
@@ -18,7 +18,7 @@ permalink: /css/
           <h5>Syntax</h5>
           Since CSS is a different language from CSS the syntax, or structure, of the language is different from 
           HTML. First of all you have to select what element on the page you want to style. This is known as a 
-          <em>selector</em>. For example you might want to change the appearance of a `<div>`. Once you've 
+          <em>selector</em>. For example you might want to change the appearance of a <code>&lt;div&gt;</code>. Once you've 
           chosen what thing to style you have to specify what <em>property</em> you want to modify. Finally you 
           need to give the chosen property a <em>value.</em> Read on to find out more about this important langauge.  
           <br/><a href="/contact/" class="btn btn-theme">Contact Us</a>
