added Koding page

--- a/software.html
+++ b/software.html
@@ -6,6 +6,10 @@ image: 850x400.png
 ---
 
 <div class="container mtb">
+
+This section contains just a few text editors that your can use for coding. There are plenty others out there, 
+and with a bit of patience you can even make your own, but for most day-to-day use any one of these should be 
+more than capable of dealing with any development challenge you throw at it.
     <div class="row">
 
         <!-- SOFTWARE TUTORIALS LIST -->
