--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ permalink: /
         <div class="col-lg-3">
             <h4>Frequently Asked Questions</h4>
             <div class="hline"></div>
-            {% for post in site.categories['question'] %} 
+            {% for post in site.categories['question'] limit:5%} 
                 <p><a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a></p>
             {% endfor %}
         </div>
